--- a/day 9/index.html
+++ b/day 9/index.html
@@ -1,57 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css Selector</title>
     <style>
-div{
-   /* Element Selector */
-    background-color: red;
-}
-.red{
-    /* Class Selector */
-    background-color: yellow;
-}
-#green{
-    /* Id Selector */
-    background-color: green;
-}
-div >p{
-    /* Child Selector */
-    color:crimson;
-    background-color: aqua;
-}
-div p{
-    /* Descendant Selector */
-    color:midnightblue;
-    background-color:yellowgreen;
-}
-*{
-    /* Universal Selector */
-   
-    margin: 0;
-    padding: 0;}
+        div {
+            /* Element Selector */
+            background-color: red;
+        }
 
-    a:visited{
-        /* Pseudo Class */
-        color: yellow;
-    }
-    a:link{
-        /* Pseudo Class */
-        color: red;
-    }
-    a:active{
-        /* Pseudo Class */
-        color:rgb(33, 101, 74);
-    }
-    a:hover{
-        /* Pseudo Class */
-        color: rgb(255, 0, 0);
-    }
+        .red {
+            /* Class Selector */
+            background-color: yellow;
+        }
 
+        #green {
+            /* Id Selector */
+            background-color: green;
+        }
+
+        div>p {
+            /* Child Selector */
+            color: crimson;
+            background-color: aqua;
+        }
+
+        div p {
+            /* Descendant Selector */
+            color: midnightblue;
+            background-color: yellowgreen;
+        }
+
+        * {
+            /* Universal Selector */
+
+            margin: 0;
+            padding: 0;
+        }
+
+        a:visited {
+            /* Pseudo Class */
+            color: yellow;
+        }
+
+        a:link {
+            /* Pseudo Class */
+            color: red;
+        }
+
+        a:active {
+            /* Pseudo Class */
+            color: rgb(33, 101, 74);
+        }
+
+        a:hover {
+            /* Pseudo Class */
+            color: rgb(255, 0, 0);
+        }
     </style>
 </head>
+
 <body>
     <div>
         Hey, I'm working on CSS from today
@@ -68,7 +78,8 @@ div p{
     <div>
         <p>hey I'm working on CSS from today</p>
     </div>
-<a href="https://www.google.com"> Go to Google</a>
-<a href="https://www.w3schools.com"> Go to W3Schools</a>
+    <a href="https://www.google.com"> Go to Google</a>
+    <a href="https://www.w3schools.com"> Go to W3Schools</a>
 </body>
+
 </html>
